ontol/ontol-compiler/test-cases/error/map/union_unit_type.on
def foo ()
def bar ()
def u (
    rel* is?: foo // ERROR unit type `foo` cannot be part of a union
    rel* is?: bar // ERROR unit type `bar` cannot be part of a union
)
